Added some delete buttons

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             </div>
             <div class="display-todo">
                 <ul class="todo-list">
-                    <li>Water Flowers <span> <i class="fa-solid fa-trash-alt"></i> </span> </li>
+                    <li>Water Flowers <span> <i class="fa-solid fa-trash"></i> </span> </li>
                     <li>Pay Bills <span> <i class="fa-solid fa-trash"></i> </span> </li>
-                    <li>Create 8 simple HTML, CSS & javascript  projects <span> <i class="fas fa-trash"> </i> </span> </li>
+                    <li>Create 8 simple projects <span> <i class="fas fa-trash"> </i> </span> </li>
                 </ul>
             </div>
             <div class="footer">
