draft front-end

--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
                 <ul class="todo-list">
                     <li>Water Flowers <span> <i class="fa-solid fa-trash"></i> </span> </li>
                     <li>Pay Bills <span> <i class="fa-solid fa-trash"></i> </span> </li>
+                    <li>Pay Bills <span> <i class="fa-solid fa-trash"></i> </span> </li>
+                   
                     <li>Create 8 simple projects <span> <i class="fas fa-trash"> </i> </span> </li>
                 </ul>
             </div>
             <div class="footer">
                 <span>You have 3 pending tasks</span>
-                <span><button>Clear All</button></span>
+                <span><button>Clear</button></span>
             </div>
         </div>
     </div>
