Added number display of tasks

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </ul>
             </div>
             <div class="footer">
-                <span>You have 3 pending tasks</span>
+                <span class="status"></span>
                 <span><button>Clear</button></span>
             </div>
         </div>
