--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <div class="footer">
                 <span class="status"></span>
-                <span><button>Clear</button></span>
+                <button>Clear</button>
             </div>
         </div>
     </div>
